manifests/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: argocd-image-updater
    control-plane: argocd-image-updater-controller
  name: argocd-image-updater-controller-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: healthz
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    control-plane: argocd-image-updater-controller
